tests/error/poly_errors/non_linear3.err
Error: Not defined for linear argument (at $FILE:25:4)
   | 
23 | @guppy(module)
24 | def main() -> None:
25 |     foo(h)
   |     ^^^^^^ Cannot instantiate non-linear type parameter `T` in type
   |            `forall T. (T -> None) -> None` with linear type
   |            `qubit`

Guppy compilation failed due to 1 previous error
